[gd_scene load_steps=6 format=3 uid="uid://cv75hi5fwiisu"]

[ext_resource type="Script" path="res://drone.gd" id="1_0lxxp"]
[ext_resource type="Texture2D" uid="uid://bxmp53ntbbrta" path="res://icon.svg" id="2_us7dm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pqb2d"]
radius = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3g2ls"]
radius = 43.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gkjfu"]
radius = 64.9384

[node name="drone" type="CharacterBody2D" groups=["idle_drones"]]
position = Vector2(-2, 0)
motion_mode = 1
script = ExtResource("1_0lxxp")

[node name="Sprite2D" type="ColorRect" parent="."]
offset_left = -55.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 55.0

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
position = Vector2(98, 2)
scale = Vector2(0.414062, 0.421875)
texture = ExtResource("2_us7dm")

[node name="Sprite2D2" type="Sprite2D" parent="Sprite2D"]
position = Vector2(98, 89)
scale = Vector2(0.414062, 0.421875)
texture = ExtResource("2_us7dm")

[node name="Sprite2D3" type="Sprite2D" parent="Sprite2D"]
position = Vector2(9, 90)
scale = Vector2(0.414062, 0.421875)
texture = ExtResource("2_us7dm")

[node name="Sprite2D4" type="Sprite2D" parent="Sprite2D"]
position = Vector2(8, 2.99999)
scale = Vector2(0.414062, 0.421875)
texture = ExtResource("2_us7dm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_pqb2d")
debug_color = Color(0.929796, 3.29214e-05, 0.659321, 0.42)

[node name="nav" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true

[node name="magnet_area" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="magnet_area"]
position = Vector2(-1, 3)
shape = SubResource("CircleShape2D_3g2ls")

[node name="gems" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="soft_collision" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1, 1)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="soft_collision"]
shape = SubResource("CircleShape2D_gkjfu")
debug_color = Color(0.658891, 0.515256, 0, 0.42)

[node name="rotor" type="Polygon2D" parent="."]
unique_name_in_owner = true
position = Vector2(-49, 47)
color = Color(0.593134, 0.593134, 0.593134, 1)
polygon = PackedVector2Array(-9, -2, -21, 23, 2, 10, 5, 1, 13, -1, 27, -26, 3, -12, 1, -3)

[node name="rotor2" type="Polygon2D" parent="."]
unique_name_in_owner = true
position = Vector2(41, 46)
color = Color(0.593134, 0.593134, 0.593134, 1)
polygon = PackedVector2Array(-9, -2, -21, 23, 2, 10, 5, 1, 13, -1, 27, -26, 3, -12, 1, -3)

[node name="rotor3" type="Polygon2D" parent="."]
unique_name_in_owner = true
position = Vector2(42, -43)
color = Color(0.593134, 0.593134, 0.593134, 1)
polygon = PackedVector2Array(-9, -2, -21, 23, 2, 10, 5, 1, 13, -1, 27, -26, 3, -12, 1, -3)

[node name="rotor4" type="Polygon2D" parent="."]
unique_name_in_owner = true
position = Vector2(-50, -42)
color = Color(0.593134, 0.593134, 0.593134, 1)
polygon = PackedVector2Array(-9, -2, -21, 23, 2, 10, 5, 1, 13, -1, 27, -26, 3, -12, 1, -3)
